Fix responsiveness bug on mobile

--- a/css/style5.css
+++ b/css/style5.css
@@ -13,7 +13,7 @@ body{
   position: absolute;
   margin: 0;
   padding: 0;
-  min-height: 100%;
+  min-height: 109%;
   width: 100%;
   background-image: linear-gradient(rgba(193, 155, 72, 0.57), rgba(193, 155, 72, 0.57)), url('../images/local_dishes/food 2.jpg');
   background-position: center center;
